--- a/Presentation package reveal.js/index.html
+++ b/Presentation package reveal.js/index.html
@@ -8,7 +8,7 @@
     <title>reveal.js</title>
 
     <link rel="stylesheet" href="css/reveal.css">
-    <link rel="stylesheet" href="css/theme/black.css">
+    <link rel="stylesheet" href="css/theme/white.css">
 
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="lib/css/monokai-sublime.css">
@@ -25,7 +25,7 @@
 
 <body>
 
-    form
+
 
     <div class="reveal">
 
@@ -33,7 +33,8 @@
 
 
    <section >
-       <h1 class="txt" style="color: rgb(204, 204, 204);" data-background="#FAEBD7">CiVi : Plateforme de CV en ligne.</h1>
+       <h1 class="txt" style="color: rgb(204, 204, 204);" data-background="#FAEBD7">Projet Tutoré<br> 1ère année
+       </h1>
 
        <img src="img/Logo SVG.svg" alt="" class="logo">
 
@@ -46,14 +47,34 @@
     <section>
         
         <section  class="coeur">
-                <h1 class="bonjour" style="color: white;">Le coeur du projet</h1>
+                <h1 class="bonjour" style="color: white; text-transform: uppercase">LE COEUR DU PROJET</h1>
 
     </section>
 
     <section>
-        <h1>J'aime pas les jaunes</h1>
+   
+   
     </section>
+    <section>
+        <h2>Plateforme de CV</h2>
+        <h3>Les objectifs</h3>
+        <h3>La cible et ses attentes</h3>
+        <h2>Se Démarquer</h2>
+        <h2>Réalisation du projet</h2>
+        Gestion :   
+        <h3>Les rôles</h3>
+        <h3>Récupération de données</h3>
+        <h3>La collaboration</h3>
+        La partie technique 
+        <h3>Langages utilisés</h3>
+        <h3>La sécurité</h3>
+        <h3>Extensibilité</h3>
+        <h2>Le groupe</h2>
+        <h3>Analyses persos</h3>
 
+
+       
+        </section>
 </section>
 
 
