Update prez (final)

--- a/Presentation package reveal.js/index.html
+++ b/Presentation package reveal.js/index.html
@@ -31,14 +31,14 @@
                     <br>de 1ère année</h2>
                 <img src="img/Logo SVG.svg" alt="" class="logo">
                 <aside class="notes">
-                    <ul>
-                        <li>Les CV interactifs</li>
-                        <li>La plateforme</li>
-                    </ul>
+
+                    <p>VALENTIN :</p>
                 </aside>
             </section>
             <section>
                 <aside class="notes">
+
+                    <p>VALENTIN :</p>
                     <ul>
                         <li>
                             <em>1x DEVELOPPER</em>
@@ -49,6 +49,8 @@
                         </li>
                         <li>Depot d'offres</li>
                     </ul>
+
+                    <p>Je vais laisser Romain vous présenter le déroulement de la présentation</p>
                 </aside>
 
                 <h2>Quel est le principe de la plateforme ?</h2>
@@ -58,20 +60,42 @@
                 </ul>
             </section>
             <section>
+                <aside class="notes">
+
+                    <p>ROMAIN :</p>
+                </aside>
+                <ol>
+                    <li>Ce que nous avons apporté</li>
+                    <li>Ce que nous avons de spécial</li>
+                    <li>Ce que nous avons utilisé</li>
+                    <li>Comment nous avons géré le projet</li>
+                    <li>Nos CV intéractifs et bilans personnels</li>
+                </ol>
+            </section>
+            <section>
                 <section class="full-screen">
+                    <aside class="notes">
+
+                        <p>ROMAIN :</p>
+                    </aside>
 
                     <h1>Ce que nous avons apporté</h1>
                 </section>
                 <section>
                     <aside class="notes">
+
+                        <p>ROMAIN :</p>
                         <ul>
                             <li>
-                                <em>2x DEVELOPPER</em>
+                                <em>1x DEVELOPPER</em>
                             </li>
                             <li>Etablir un contact entre entreprises et etudiants</li>
                             <li>Valoriser les étudiants de MMI</li>
                             <li>Faciliter la découverte de profils</li>
-                            <li>Cibles</li>
+                            <li>
+                                <em>1x DEVELOPPER</em>
+                            </li>
+                            <li>Permettre aux entreprises de déposer des offres</li>
                         </ul>
                     </aside>
 
@@ -85,6 +109,8 @@
                 </section>
                 <section>
                     <aside class="notes">
+
+                        <p>ROMAIN :</p>
                         <ul>
                             <li>
                                 <em>1x DEVELOPPER</em>
@@ -105,11 +131,13 @@
                 </section>
                 <section>
                     <aside class="notes">
+
+                        <p>ROMAIN :</p>
                         <ul>
                             <li>
                                 <em>1x DEVELOPPER</em>
                             </li>
-                            <li>CiVi est un homonyme de la prononciation anglaise</li>
+                            <li>CiVi est un jeu de mot avec la prononciation anglaise</li>
                             <li>
                                 <em>1x DEVELOPPER</em>
                             </li>
@@ -141,6 +169,8 @@
                 <section>
                     <aside class="notes">
 
+                        <p>ROMAIN :</p>
+
                         <h1>DYNAMIQUE</h1>
                     </aside>
 
@@ -148,6 +178,8 @@
                 </section>
                 <section>
                     <aside class="notes">
+
+                        <p>ROMAIN :</p>
                         <ul>
                             <li>La rapidité, l'objectif est atteignable en peu de clics</li>
                             <li>D'où le bleu de la confiance avec la modernité du violet</li>
@@ -184,11 +216,13 @@
             <section>
                 <section>
                     <aside class="notes">
+
+                        <p>VALENTIN :</p>
                         <ul>
                             <li>HTML/CSS : Front-end</li>
                             <li>PHP : Back-end</li>
                             <li>MySQL : Base de données</li>
-                            <li>Algolia : Recherche</li>
+                            <li>Algolia : Moteur de recherche</li>
                         </ul>
                     </aside>
 
@@ -224,7 +258,12 @@
                 <section>
                     <aside class="notes">
 
-                        <p> Mon travail avait pour but de reproduire la maquette préalablement réalisée</p>
+                        <p>VALENTIN :</p>
+                        <ul>
+                            <li>Mon travail avait pour but de reproduire la maquette préalablement réalisée.</li>
+                            <li>Le site devait être responsive, ce qui a été facilité par le flexbox.</li>
+                            <li>Je vais maintenant laisser Arno vous parler du backend.</li>
+                        </ul>
                     </aside>
 
                     <h3>HTML / CSS</h3>
@@ -235,6 +274,8 @@
                 </section>
                 <section>
                     <aside class="notes">
+
+                        <p>ARNO :</p>
                         <ul>
                             <li>Un framework : Laravel</li>
                             <li>Type MVC (Modèle Vue Contrôlleur) -> Modèle définit les objets (ex les etudiants), Vue définie
@@ -284,20 +325,28 @@
                 </section>
                 <section>
                     <aside class="notes">
-                        <li>Une base de donnée relationnelle</li>
-                        <li>Un design précis : gérer les inscriptions/connexions/mdp oubliés/offres/entreprises/étudiants</li>
-                        <li>On peut noter la table migrations qui contient l'historique des opérations effectuées pour créer
-                            les tables, par justement Eloquent qui permet d'éviter de créer toute les tables et les relations
-                            à la main</li>
+
+                        <p>ARNO :</p>
+                        <ul>
+                            <li>Une base de donnée relationnelle</li>
+                            <li>Un design précis : gérer les inscriptions/connexions/mdp oubliés/offres/entreprises/étudiants</li>
+                            <li>On peut noter la table migrations qui contient l'historique des opérations effectuées pour créer
+                                les tables, par justement Eloquent qui permet d'éviter de créer toute les tables et les relations
+                                à la main</li>
+                        </ul>
                     </aside>
 
                     <h3>MySQL</h3>
                     <img src="img/bdd.PNG"> </section>
                 <section>
                     <aside class="notes">
-                        <li>La technologie du moteur de recherche -> fournie par Algolia</li>
-                        <li>Un moteur : instantanné, qui peut rechercher de nombreux types de données, supporte le filtrage</li>
-                        <li>Un des critères importants pour le choix : sa compatibilité avec la RGPD</li>
+
+                        <p>ARNO :</p>
+                        <ul>
+                            <li>La technologie du moteur de recherche -> fournie par Algolia</li>
+                            <li>Un moteur : instantanné, qui peut rechercher de nombreux types de données, supporte le filtrage</li>
+                            <li>Un des critères importants pour le choix : sa compatibilité avec la RGPD</li>
+                        </ul>
                     </aside>
 
                     <h3>Algolia</h3>
@@ -306,15 +355,27 @@
             <section>
                 <section>
                     <aside class="notes">
-                        <li>Maintenant : comment le projet s'est déroulé ?</li>
+
+                        <p>ROMAIN :</p>
+                        <ul>
+                            <li>Maintenant : comment le projet s'est-il déroulé ?</li>
+                        </ul>
                     </aside>
 
                     <h1>Notre gestion de projet</h1>
                 </section>
                 <section>
                     <aside class="notes">
-                        <li></li>
+
+                        <p>ROMAIN :</p>
+                        <ul>
+                            <li>Communication -> défi dans un projet</li>
+                            <li>Défi à peu près relevé, mais quelques problèmes :</li>
+                            <li>Dur de motiver tout le monde</li>
+                            <li></li>
+                        </ul>
                     </aside>
+
                     <h2>1. La Communication</h2>
                 </section>
                 <section>
@@ -322,6 +383,17 @@
                     <h2>2. Planning</h2>
                 </section>
                 <section>
+                    <aside class="notes">
+
+                        <p>VALENTIN :</p>
+                        <ul>
+                            <li>Collaborer avec Drive et Messenger -> compliqué</li>
+                            <li>Donc :</li>
+                            <li>Dépôt Git -> partage de fichiers et de code</li>
+                            <li>CSS et JS lourd -> Sass et Webpack avec Laravel Mix pour compiler ces ressources</li>
+                            <li>Drive avec Google Docs pour les documents à rendre</li>
+                        </ul>
+                    </aside>
 
                     <h2>3. Workflow</h2>
 
@@ -332,6 +404,20 @@
                         <img src="img/drive.png" alt=""> </div>
                 </section>
                 <section>
+                    <aside class="notes">
+
+                        <p>ARNO :</p>
+                        <ul>
+                            <li>On a utilisé beaucoup de logiciels qui nous ont aidé dans le projet, tant pour la conception
+                                que la collaboration</li>
+                            <li>Logiciels "artistiques" comme AE, PP, Illustrator, pour la création de contenu, logo, vidéo</li>
+                            <li>Visual Studio Code avec son extension Live Share pour l'édition de code partagé en temps réel</li>
+                            <li>Coggle pour faire des cartes mentales</li>
+                            <li>Gantt Project inclus ici, mais pas dans le workflow -> impossible de modifier un planning et
+                                de le partager sans renvoyer et retélécharger les fichiers -> pas pratiquable en vraie gestion
+                                de P</li>
+                        </ul>
+                    </aside>
 
                     <h2>4. Les Outils</h2>
 
@@ -345,24 +431,71 @@
                         <img src="img/gantt.png" alt=""> </div>
                 </section>
                 <section>
-                    <aside>
-                        <ul></ul>
-                            l
+                    <aside class="notes">
+
+                        <p>ARNO :</p>
+                        <ul>
+                            <li>Système permettant de rester sur le site en voyant les CV -> JavaScript avec un panneau créé
+                                en HTML et CSS</li>
+                            <li>Un moteur de recherche performant et flexible -> Algolia</li>
+                            <li>Apprentisage des outils -> La persévérance</li>
+                            <li>La communication interne -> Mauvaise répartition des tâches initialement</li>
                         </ul>
                     </aside>
+
                     <h2>5. Les Erreurs
                         <br> Problèmes et solutions</h2>
                 </section>
             </section>
-            <section>
-                <section>
+            <section class="full-screen">
+                <aside class="notes">
+                    <ul>
+                        <li>ROMAIN :</li>
+                        <li>VALENTIN :</li>
+                        <li>ARNO :</li>
+                    </ul>
+                </aside>
 
-                    <h1>Notre Ressenti</h1>
-                </section>
+                <h1>Notre CV, nos impressions sur le projet</h1>
+            </section>
+            <section>
+                <aside>
+
+                    <p>ARNO :</p>
+                    <ul>
+                        <li>
+                            <em>1x DEVELOPPER</em>
+                        </li>
+                        <li>Beaucoup de fonctions optionnelles</li>
+                        <li>
+                            <em>1x DEVELOPPER</em>
+                        </li>
+                        <li>Mais un système fonctionnel !</li>
+                        <li>On a un produit fini (presque, il manque les offres et entreprises à modifier)</li>
+                        <li>
+                            <em>1x DEVELOPPER</em>
+                        </li>
+                        <li>Pour la RGPD, nous n'avons pas pu mettre en place de systèmes de suppression d'utilisateurs automatisé
+                            ou de téléchargement des données, par manque de temps, mais grâce à Laravel tout ceci pourrait
+                            être rajouté facilement</li>
+                        <li>
+                            <em>1x DEVELOPPER</em>
+                        </li>
+                        <li>Mais ce projet a permis de nous souder. On a appris beaucoup, que ce soit dans la gestion du projet,
+                            ou la collaboration.</li>
+                        <li>je pense que nous sommes tous d'accord pour dire que ce fut une expérience enrichissante !</li>
+                    </ul>
+                </aside>
+
+                <h2> Conclusion </h2>
+                <ul>
+                    <li class="fragment fade-up">Des fonctions optionnelles</li>
+                    <li class="fragment fade-up">Un produit fini</li>
+                    <li class="fragment fade-up">La RGPD : pas compatible</li>
+                    <li class="fragment fade-up">Un projet formateur</li>
+                </ul>
             </section>
         </div>
-    </div>
-    </div>
     </div>
     <script src="lib/js/head.min.js "></script>
     <script src="js/reveal.js "></script>
