--- a/Presentation package reveal.js/index.html
+++ b/Presentation package reveal.js/index.html
@@ -444,6 +444,7 @@
                     </aside>
 
                     <h2>5. Les Erreurs
+                        <br>
                         <br> Problèmes et solutions</h2>
                 </section>
             </section>
@@ -456,10 +457,11 @@
                     </ul>
                 </aside>
 
-                <h1>Notre CV, nos impressions sur le projet</h1>
+                <h1>Notre CV
+                    <br> Nos impressions sur le projet</h1>
             </section>
             <section>
-                <aside>
+                <aside class="notes">
 
                     <p>ARNO :</p>
                     <ul>
