--- a/Presentation package reveal.js/index.html
+++ b/Presentation package reveal.js/index.html
@@ -344,8 +344,9 @@
                         <p>ARNO :</p>
                         <ul>
                             <li>La technologie du moteur de recherche -> fournie par Algolia</li>
-                            <li>Un moteur : instantanné, qui peut rechercher de nombreux types de données, supporte le filtrage</li>
+                            <li>Un moteur : instantané, qui peut rechercher de nombreux types de données, supporte le filtrage</li>
                             <li>Un des critères importants pour le choix : sa compatibilité avec la RGPD</li>
+                            <li>Romain va maintenant vous expliquer comment notre projet s'est déroulé</li>
                         </ul>
                     </aside>
 
@@ -370,9 +371,8 @@
                         <p>ROMAIN :</p>
                         <ul>
                             <li>Communication -> défi dans un projet</li>
-                            <li>Défi à peu près relevé, mais quelques problèmes :</li>
+                            <li>Défi à peu près relevé, mais quelques problèmes, comme :</li>
                             <li>Dur de motiver tout le monde</li>
-                            <li></li>
                         </ul>
                     </aside>
 
@@ -439,13 +439,11 @@
                                 en HTML et CSS</li>
                             <li>Un moteur de recherche performant et flexible -> Algolia</li>
                             <li>Apprentisage des outils -> La persévérance</li>
-                            <li>La communication interne -> Mauvaise répartition des tâches initialement</li>
+                            <li>Mauvaise répartition des tâches initialement</li>
                         </ul>
                     </aside>
 
-                    <h2>5. Les Erreurs
-                        <br>
-                        <br> Problèmes et solutions</h2>
+                    <h2>5. Les problèmes et solutions</h2>
                 </section>
             </section>
             <section class="full-screen">
@@ -483,8 +481,8 @@
                         <li>
                             <em>1x DEVELOPPER</em>
                         </li>
-                        <li>Mais ce projet a permis de nous souder. On a appris beaucoup, que ce soit dans la gestion du projet,
-                            ou la collaboration.</li>
+                        <li>Pour terminer, ce projet a permis de nous souder. On a appris beaucoup, que ce soit dans la gestion
+                            du projet, ou la collaboration.</li>
                         <li>je pense que nous sommes tous d'accord pour dire que ce fut une expérience enrichissante !</li>
                     </ul>
                 </aside>
